--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,9 @@
 
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
+	<link rel="stylesheet" href="trim.css" />	
 	<link rel="stylesheet" href="global.css" />
-	
+
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
