--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,7 @@
 
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
+	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="trim.css" />	
 	<link rel="stylesheet" href="global.css" />
 
