--- a/src/template.html
+++ b/src/template.html
@@ -11,8 +11,9 @@
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="trim.css" />	
 	<link rel="stylesheet" href="global.css" />
+	<link rel="stylesheet" href="trim.css" />	
+	<link rel="stylesheet" href="main.css" />
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
